arreglados issues